fix: added expand-collapse button      changed add item icon      changed padding of card footer

--- a/src/data/styles/designerFontStyle.scss
+++ b/src/data/styles/designerFontStyle.scss
@@ -1,23 +1,13 @@
 .questionnaire-designer {
   .questionnaire-item__headline {
     label:not(.labelReplacer) {
-      // @extend .font-weight-bold;
       @extend .text-muted;
-    }
-  }
-
-  .card-active,
-  .questionnaire {
-    input,
-    textarea {
-      // font-weight: 600;
     }
   }
 
   .questionnaire-group-item__headline {
     label:not(.labelReplacer) {
       @extend .text-muted;
-      // @extend .h4;
     }
   }
 
